# python-learning

./: filehandling.py  flask.py  hello.py  python_basic.py
new-project/: .gitignore  README.md  samconfig.toml  template.yaml
new-project/orders_api/: create.py
new-project/s3_handlers/: read.py  upload.py
new-project/text_to_speech/: app.py  index.html
todo-app/backend/: pyproject.toml
todo-app/backend/app/: database.py  main.py  models.py  routes.py
todo-app/backend/instance/: tasks.db
todo-app/frontend/: package-lock.json  package.json
todo-app/frontend/src/: App.css  App.jsx  index.js
todo-app/frontend/src/components/: AddButton.jsx  CategoryControls.jsx  CreateTaskForm.jsx  Footer.jsx  Header.jsx  Login.jsx  MainContent.jsx  Profile.jsx  Profile.module.css  Sidebar.jsx  Sidebar.module.css  TaskFilterCard.jsx  TaskFilterCard.module.css  TaskOptions.jsx  TaskOptions.module.css  TaskTextToggle.jsx  TodoListCard.jsx  TodoListCard.module.css
