[project]
package-mode = false
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ayushi1-08",email = "ayushiagrawal0501@gmail.com"}
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
